// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`NToggle snapshots both states: toggle-off 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  hitSlop={8}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "opacity": 1,
    }
  }
>
  <View
    style={
      [
        {
          "backgroundColor": "#FFFFFF",
          "borderRadius": 999,
        },
        {
          "shadowColor": "#FFFFFF",
          "shadowOffset": {
            "height": 2,
            "width": 2,
          },
          "shadowOpacity": 1,
          "shadowRadius": 4,
        },
        {
          "height": 30,
          "justifyContent": "center",
          "padding": 4,
          "width": 52,
        },
      ]
    }
  >
    <View
      pointerEvents="none"
      style={
        [
          {
            "bottom": 0,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          },
          {
            "borderRadius": 999,
          },
          {
            "shadowColor": "#BFBFBF",
            "shadowOffset": {
              "height": -2,
              "width": -2,
            },
            "shadowOpacity": 1,
            "shadowRadius": 4,
          },
        ]
      }
    />
    <View
      pointerEvents="none"
      style={
        [
          {
            "backgroundColor": "#7B8CDE",
            "borderRadius": 999,
            "bottom": 4,
            "left": 4,
            "position": "absolute",
            "right": 4,
            "top": 4,
          },
          {
            "opacity": 0,
          },
        ]
      }
    />
    <View
      style={
        {
          "transform": [
            {
              "translateX": 0,
            },
          ],
        }
      }
    >
      <View
        style={
          {
            "backgroundColor": "#FFFFFF",
            "borderRadius": 11,
            "elevation": 2,
            "height": 22,
            "shadowColor": "#BFBFBF",
            "shadowOffset": {
              "height": 1,
              "width": 1,
            },
            "shadowOpacity": 0.6,
            "shadowRadius": 2,
            "width": 22,
          }
        }
      />
    </View>
  </View>
</View>
`;

exports[`NToggle snapshots both states: toggle-on 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  hitSlop={8}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "opacity": 1,
    }
  }
>
  <View
    style={
      [
        {
          "backgroundColor": "#FFFFFF",
          "borderRadius": 999,
        },
        {
          "shadowColor": "#FFFFFF",
          "shadowOffset": {
            "height": 2,
            "width": 2,
          },
          "shadowOpacity": 1,
          "shadowRadius": 4,
        },
        {
          "height": 30,
          "justifyContent": "center",
          "padding": 4,
          "width": 52,
        },
      ]
    }
  >
    <View
      pointerEvents="none"
      style={
        [
          {
            "bottom": 0,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          },
          {
            "borderRadius": 999,
          },
          {
            "shadowColor": "#BFBFBF",
            "shadowOffset": {
              "height": -2,
              "width": -2,
            },
            "shadowOpacity": 1,
            "shadowRadius": 4,
          },
        ]
      }
    />
    <View
      pointerEvents="none"
      style={
        [
          {
            "backgroundColor": "#7B8CDE",
            "borderRadius": 999,
            "bottom": 4,
            "left": 4,
            "position": "absolute",
            "right": 4,
            "top": 4,
          },
          {
            "opacity": 1,
          },
        ]
      }
    />
    <View
      style={
        {
          "transform": [
            {
              "translateX": 22,
            },
          ],
        }
      }
    >
      <View
        style={
          {
            "backgroundColor": "#FFFFFF",
            "borderRadius": 11,
            "elevation": 2,
            "height": 22,
            "shadowColor": "#BFBFBF",
            "shadowOffset": {
              "height": 1,
              "width": 1,
            },
            "shadowOpacity": 0.6,
            "shadowRadius": 2,
            "width": 22,
          }
        }
      />
    </View>
  </View>
</View>
`;
